# wasm-interpreter

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build_docker.sh  clippy.toml  codecov.yml  flake.nix  overlay.nix  sized_behavior.md  todos.md  treefmt.nix  treefmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  nix.yaml  nix.yml  no-nix-ci.yaml  pages_coverage_preview.yaml  pages_deploy_main.yaml  pages_requirement_preview.yaml  pages_whitepaper_preview.yaml  rust-test-runner.yml  size_preview.yaml  testsuite_preview.yaml
benches/: hook_check.rs  hook_performance_impact.rs
ci-tools/: .gitignore  Dockerfile  compare_sizes.py  compare_testsuite.py  start_nix.sh
ci-tools/compare-testsuite-rs/: Cargo.toml
ci-tools/compare-testsuite-rs/src/: deltas.rs  summary.rs
ci_tools/: compare_testsuite.py
coverage/pr-preview/pr-38/: index.html
coverage/pr-preview/pr-41/: index.html
crates/benchmark/: Cargo.toml  README.md
crates/benchmark/benches/: general_purpose.rs  hook_performance_impact.rs  var_length_integer_reading.rs
crates/c-api/: Cargo.toml  build.rs
crates/c-api/src/: lib.rs
crates/checked/: Cargo.toml  README.md
crates/checked/src/: interop.rs  lib.rs  linker.rs  registry.rs  store.rs  stored_types.rs  value.rs
crates/compare-testsuite-rs/: Cargo.toml
crates/compare-testsuite-rs/src/: ci_reports.rs  deltas.rs  main.rs  summary.rs
crates/interop/: Cargo.toml  README.md
crates/interop/src/: lib.rs
crates/lib-wasm-coverage/: Cargo.toml  libwasm_test_prog.rlib  wasm_label_test_prog.rs  wasm_label_test_prog.wasm  wasm_test_prog.rs
crates/lib-wasm-coverage/examples/: main.rs
crates/lib-wasm-coverage/samples/collatz/: collatz.rs  inputs.txt
crates/lib-wasm-coverage/samples/fizzbuzz/: fizzbuzz.rs  inputs.txt
crates/lib-wasm-coverage/samples/overflow/: inputs.txt  overflow.rs
crates/lib-wasm-coverage/src/: covlist.rs  lib.rs  probes.rs  reporter.rs
crates/linker/: Cargo.toml  README.md
crates/linker/src/: lib.rs
crates/log_wrapper/: Cargo.toml  README.md
crates/log_wrapper/src/: lib.rs
crates/registry/: Cargo.toml  README.md
crates/registry/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/src/: fibonacci.wasm  fibonacci.wat  main.rs
crates/wasi_common_wrapper/: Cargo.toml  hello_world.wat
crates/wasi_common_wrapper/src/: main.rs
examples/basic/: abc.wat  main.rs
examples/fuel/: main.rs
examples/host_function_registry/: main.rs  module.wat  registry.rs
examples/managed_host_functions/: main.rs  module.wasm  registry.rs
examples/stuff/: main.rs
main/: testsuite_results.json
main/bench/report/: index.html
main/coverage/html/: index.html
main/requirements/html/: index.html
main/requirements/json/: index.json
main/rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
main/rustdoc/libm/: all.html  fn.acos.html  fn.acosf.html  fn.acosh.html  fn.acoshf.html  fn.asin.html  fn.asinf.html  fn.asinh.html  fn.asinhf.html  fn.atan.html  fn.atan2.html  fn.atan2f.html  fn.atanf.html  fn.atanh.html  fn.atanhf.html  fn.cbrt.html  fn.cbrtf.html  fn.ceil.html  fn.ceilf.html  fn.copysign.html  fn.copysignf.html  fn.cos.html  fn.cosf.html  fn.cosh.html  fn.coshf.html  fn.erf.html  fn.erfc.html  fn.erfcf.html  fn.erff.html  fn.exp.html  fn.exp10.html  fn.exp10f.html  (+95 more)
main/test/: index.html
pkgs/: benchmark.nix  coverage.nix  flamegraph.nix  polybench-rs.nix  report.nix  report_index.html  requirements.nix  rust-workspace.nix  typst-packages-cache.nix  wasm-interpreter.nix
pkgs/report/: package.nix  report_index.html
pkgs/whitepaper/: main.typ  package.nix  refs.yaml  template.typ
requirements/: README.md  requirements.sdoc
src/: error.rs  lib.rs  section.rs  wasm.rs
src/core/: error.rs  fixed_capacity_vec.rs  indices.rs  mod.rs  opcodes.rs  rw_spinlock.rs  sidetable.rs  slotmap.rs  utils.rs
src/execution/: assert_validated.rs  checked.rs  checked_store.rs  config.rs  const_interpreter_loop.rs  error.rs  execution_info.rs  function_ref.rs  global_store.rs  hooks.rs  instructions.rs  interop.rs  interpreter_loop.rs  label.rs  linear_memory.rs  linker.rs  little_endian.rs  locals.rs  locals_new.rs  lut.rs  mod.rs  registry.rs  resumable.rs  store.rs  unwrap_validated.rs  value.rs  value_stack.rs
src/section/: code.rs  custom.rs  export.rs  function.rs  type.rs
src/validation/: code.rs  config.rs  custom_section.rs  data.rs  globals.rs  import_section.rs  mod.rs  read_constant_expression.rs  validation_stack.rs
src/wasm/: indices.rs  types.rs  values.rs
tests/: add_one.rs  basic_memory.rs  conversions.rs  dynamic.rs  errors.rs  f32.rs  f64.rs  fc_extensions.rs  fuel.rs  function_host.rs  function_recursion.rs  globals.rs  i32.rs  i64.rs  imports.rs  lib.rs  linker.rs  memory.rs  memory_as_slice.rs  memory_copy.rs  memory_fill.rs  memory_grow.rs  memory_init.rs  memory_redundancy.rs  memory_size.rs  memory_trap.rs  module_imports_exports.rs  module_instantiate.rs  multiple_return_values.rs  recursion.rs  resumable.rs  return.rs  rw_spinlock.rs  same_type_fn.rs  select.rs  start_function.rs  table.rs  table_fill.rs  table_get.rs  table_grow.rs  (+5 more)
tests/NOT_WORKING/: f32.rs  fc_extensions.rs  globals.rs  i32.rs  lib.rs  memory_fill.rs  memory_grow.rs  memory_redundancy.rs  memory_trap.rs  same_type_fn.rs  start_function.rs  table.rs  table_fill.rs  table_init.rs  table_size.rs
tests/arithmetic/: bitwise.rs  division.rs  mod.rs  multiply.rs  remainder.rs  subtraction.rs
tests/common/: mod.rs  runner.rs  wasmtime_runner.rs
tests/instructions/: mod.rs
tests/relational_and_equality/: equality.rs  mod.rs  relational.rs
tests/specification/: README.md  ci_reports.rs  dummy.wast  error_matching.rs  files.rs  mod.rs  reports.rs  run.rs  test.rs  test_errors.rs
tests/structured_control_flow/: block.rs  if.rs  loop.rs  mod.rs
tests/to_redo/: add_one.rs  basic_memory.rs  conversions.rs  imports.rs  table.rs  table_get.rs
web/: index.html
whitepaper/: main.typ  template.typ
(+7681 files in other folders)
