[package]
name = "wasm-interpreter"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"
description = """
A WASM interpreter tailored for safety use-cases, such as automotive and avionics applications
"""
homepage = "https://github.com/DLR-FT/wasm-interpreter"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm"
path = "src/lib.rs"

[build]
profiler = true

[dependencies]
libm = "0.2.8"
log = "=0.4.22"

[dev-dependencies]
test-log = {version = "0.2.14", features = ["log"]}
env_logger = "0.10.1"
wasmparser = "0.119.0"
itertools = "0.12.0"
wat = "1.0.83"
criterion = { version = "0.5.1", features = ["html_reports"] }


[features]
default = ["hooks"]
hooks = []


[[bench]]
name = "hook_performance_impact"
harness = false
