workspace.members = ["ci-tools/compare-testsuite-rs"]

[package]
name = "wasm-interpreter"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0" # Keep this in sync with the requirements!
description = """
A WASM interpreter tailored for safety use-cases, such as automotive and avionics applications
"""
homepage = "https://github.com/DLR-FT/wasm-interpreter"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm"
path = "src/lib.rs"

[build]
profiler = true

[dependencies]
libm = "0.2.8"
log = "=0.4.22"

[dev-dependencies]
test-log = { version = "0.2.14", features = ["log"] }
env_logger = "0.10.1"
wasmparser = "0.119.0"
itertools = "0.12.0"
wat = "1.0.83"
wast = "212.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
hexf = "0.2.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[features]
default = ["hooks"]
hooks = []

[[bench]]
name = "hook_performance_impact"
harness = false
