[workspace]

members = [
  "crates/benchmark",
  "crates/compare-testsuite-rs",
  "crates/log_wrapper",
]
resolver = "2"

[workspace.dependencies]
env_logger = "0.10.1"
indexmap = "=2.11.4"                                   # this version has MSRV 1.63, while the next 2.12.0 jumps to MSRV 1.82
libm = "0.2.8"
log = "=0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
test-log = { version = "0.2.14", features = ["log"] }
wat = "1.0.83"


[package]
name = "wasm-interpreter"
version = "0.2.0"
edition = "2021"
rust-version = "1.76.0" # Keep this in sync with the requirements!
description = """
A WASM interpreter tailored for safety use-cases, such as automotive and avionics applications
"""
homepage = "https://github.com/DLR-FT/wasm-interpreter"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm"
path = "src/lib.rs"

[dependencies]
libm = "=0.2.8"
log_wrapper.path = "crates/log_wrapper"

[dev-dependencies]
bumpalo = "3.17.0"
env_logger = { workspace = true }
hexf = "0.2.1"
itertools = "0.14.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["log"] }
wast = "212.0.0"
wat = { workspace = true }
regex = "1.11.1"
envconfig = "0.11.0"
lazy_static = "1.5.0"
thiserror = "2.0"
log.workspace = true

[features]
default = ["log_wrapper/log"]
