[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
  "cargo_bench_support",
  "plotters",
] }
wasm-interpreter = { path = "../..", default-features = false }
wasmi = "0.40.0"
wasmtime = { version = "27.0.0", default-features = false, features = [
  "runtime",
  "cranelift",
  "parallel-compilation",
  "std",
] }
wat = { workspace = true }

[features]
foreign-interpreters = ["wasmi", "wasmtime"]
wasmi = []
wasmtime = []

[[bench]]
name = "general_purpose"
harness = false
