[package]
name = "lib-wasm-coverage"
version = "0.1.0"
edition = "2024"

[dependencies]
log_wrapper.path = "../log_wrapper"
wasm-interpreter.path = "../.."
wasmparser = "0.245.1"
gimli = { version = "0.33.0", optional = true }
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
wat.workspace = true

[features]
alloc = []
default = ["std"]
std = ["alloc", "gimli"]
