[package]
name = "log_wrapper"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0" # Keep this in sync with the requirements!
description = """
A WASM interpreter tailored for safety use-cases, such as automotive and avionics applications
"""
homepage = "https://github.com/DLR-FT/wasm-interpreter"
license = "MIT OR Apache-2.0"

[dependencies]
log = { workspace = true, optional = true }
